bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:11: error: not found: value bsmile
    if (bsmile) {return false}
        ^