bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  
  if (aSmile){
    if(bSmile){ return true}
    else{return false}
    
  }
  
  else{
    if (bsmile) {return false}
    else {return true}
  }
}